[package]
name = "tailscale-vips-loopback-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
tailscale-vips-loopback-common = { path = "../tailscale-vips-loopback-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tailscale-vips-loopback"
path = "src/main.rs"
